--- a/MLFLOW/mini.ipynb
+++ b/MLFLOW/mini.ipynb
@@ -542,6 +542,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = precision_score(y_true = y_test, y_pred = y_pred, average = \"weighted\")\n",
+    "\n",
+    "recall = recall_score(y_true = y_test, y_pred = y_pred, average = \"weighted\")\n",
+    "\n",
+    "f1 = f1_score(y_test, y_pred, average = \"weighted\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -555,20 +568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/09/05 03:41:35 WARNING mlflow.system_metrics.system_metrics_monitor: Skip logging GPU metrics because creating `GPUMonitor` failed with error: Failed to initialize NVML, skip logging GPU metrics: NVML Shared Library Not Found.\n",
-      "2024/09/05 03:41:35 INFO mlflow.system_metrics.system_metrics_monitor: Started monitoring system metrics.\n",
-      "Registered model 'tracking mlflow-mini' already exists. Creating a new version of this model...\n",
-      "2024/09/05 03:41:41 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking mlflow-mini, version 3\n",
-      "Created version '3' of model 'tracking mlflow-mini'.\n",
-      "2024/09/05 03:41:41 INFO mlflow.system_metrics.system_metrics_monitor: Stopping system metrics monitoring...\n",
-      "2024/09/05 03:41:41 INFO mlflow.system_metrics.system_metrics_monitor: Successfully terminated system metrics monitoring!\n"
+      "2024/09/05 09:25:22 INFO mlflow.tracking.fluent: Experiment with name 'MLFlow Mini' does not exist. Creating a new experiment.\n",
+      "2024/09/05 09:25:22 WARNING mlflow.system_metrics.system_metrics_monitor: Skip logging GPU metrics because creating `GPUMonitor` failed with error: Failed to initialize NVML, skip logging GPU metrics: NVML Shared Library Not Found.\n",
+      "2024/09/05 09:25:22 INFO mlflow.system_metrics.system_metrics_monitor: Started monitoring system metrics.\n",
+      "Successfully registered model 'tracking mlflow-mini'.\n",
+      "2024/09/05 09:25:30 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: tracking mlflow-mini, version 1\n",
+      "Created version '1' of model 'tracking mlflow-mini'.\n",
+      "2024/09/05 09:25:30 INFO mlflow.system_metrics.system_metrics_monitor: Stopping system metrics monitoring...\n",
+      "2024/09/05 09:25:30 INFO mlflow.system_metrics.system_metrics_monitor: Successfully terminated system metrics monitoring!\n"
      ]
     }
    ],
@@ -584,6 +598,9 @@
     "    \n",
     "    # Log the loss metric\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
+    "    mlflow.log_metric(\"precision\", precision)\n",
+    "    mlflow.log_metric(\"recall\", recall)\n",
+    "    mlflow.log_metric(\"F1_score\", f1)\n",
     "    \n",
     "    # Set a tag that we can be used to remind ourselves with what this run was for.\n",
     "    mlflow.set_tag(\"Training Info\", \"Logistic-Regression for Iris Dataset\")\n",
@@ -615,185 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e21640a6c978497fae1de5a62aad68eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading artifacts:   0%|          | 0/11 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/09/05 03:41:41 INFO mlflow.store.artifact.artifact_repo: The progress bar can be disabled by setting the environment variable MLFLOW_ENABLE_ARTIFACTS_PROGRESS_BAR to false\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "      <th>actual_class</th>\n",
-       "      <th>predicted_class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                6.1               2.8                4.7               1.2   \n",
-       "1                5.7               3.8                1.7               0.3   \n",
-       "2                7.7               2.6                6.9               2.3   \n",
-       "3                6.0               2.9                4.5               1.5   \n",
-       "4                6.8               2.8                4.8               1.4   \n",
-       "5                5.4               3.4                1.5               0.4   \n",
-       "6                5.6               2.9                3.6               1.3   \n",
-       "7                6.9               3.1                5.1               2.3   \n",
-       "8                6.2               2.2                4.5               1.5   \n",
-       "9                5.8               2.7                3.9               1.2   \n",
-       "\n",
-       "   actual_class  predicted_class  \n",
-       "0             1                1  \n",
-       "1             0                0  \n",
-       "2             2                2  \n",
-       "3             1                1  \n",
-       "4             1                1  \n",
-       "5             0                0  \n",
-       "6             1                1  \n",
-       "7             2                2  \n",
-       "8             1                1  \n",
-       "9             1                1  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the model back for prediction as a generic Python Function model.\n",
     "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)\n",
